tests/typing/faulty_ops.sy
start :: fn do
    1 + 1
    "abc" + 1
    (1, 2) + (3, 4) * 1
    !true
    !1
    -1
    1 in {1, 2, 3}
    1 in {"abc", "abc"}
end
// error: $BinOp { .. }
// error: $BinOp { .. }
// error: $UniOp { .. }
// error: $BinOp { .. }
